# asciinema-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.ci/: setup_musl.sh
alacritty/font/src/: lib.rs
alacritty/font/src/darwin/: mod.rs
alacritty/font/src/ft/: mod.rs
alacritty/src/: display.rs  event.rs
alacritty/src/renderer/: mod.rs
pty-shell/: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
pty-shell/examples/: main.rs
pty-shell/src/: command.rs  error.rs  lib.rs  raw_handler.rs  terminal.rs  winsize.rs
pty-shell/tests/: it_can_hook_stdout_with_callback.rs  it_can_hook_stdout_with_handler.rs  it_can_spawn.rs  lib.rs
src/: api.rs  clock.rs  config.rs  main.rs  session.rs  terminal.rs  uploader.rs
src/commands/: authenticate.rs  concatenate.rs  convert.rs  mod.rs  play.rs  record.rs  upload.rs
src/output_formats/: asciicast.rs  mod.rs  raw.rs  test_helpers.rs
src/session/: asciicast.rs  clock.rs  mod.rs  raw.rs
src/settings/: cli.rs  config.rs  install.rs  mod.rs
