[package]
name = "asciinema"
version = "0.5.2-pre"
authors = ["Christian Legnitto <christian@legnitto.com>"]
description = "Terminal recording and playback client for asciinema.org"
homepage = "https://github.com/LegNeato/asciinema-rs"
repository = "https://github.com/LegNeato/asciinema-rs"
readme = "README.md"
keywords = ["asciinema", "asciicast", "ascii", "tty", "riir"]
license = "MIT/Apache-2.0"
# https://github.com/rust-lang/cargo/issues/1565
publish = false

[dependencies]
config = "0.9"
failure = "0.1.1"
termcolor = "0.3"
structopt = "0.2"
libc = "0.2.36"
asciicast = "0.2.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.9.4"
serde_derive = "^1.0.8"
serde = "^1.0.8"
serde_json = "1.0"
pty-shell = { path = "pty-shell", version = "0.3.0"}
url = "1.7.0"
url_serde = "0.2.0"
termion = "1.0.0"
uuid = { version = "0.6", features = ["v4", "serde"] }
os_type = "2.0.0"
openssl-probe = "0.1.2"
derive_builder = "0.5.1"
tempfile = "3.0.0"

[package.metadata.release]
dev-version-ext = "pre"
pre-release-replacements = [
  { file="CHANGELOG.md", search="## master", replace="## master\n\n* No changes yet\n\n## [[{{version}}] - {{date}}](https://github.com/LegNeato/asciinema-rs/releases/tag/v{{version}})"},
]
pre-release-commit-message = "Release {{version}}"
pro-release-commit-message = "Bump version to {{version}}"
tag-prefix = "v"
tag-message = "Release {{prefix}}{{version}}"
upload-doc = false
