[package]
name = "asciinema"
version = "0.5.2-pre"
edition = "2018"
authors = ["Christian Legnitto <christian@legnitto.com>"]
description = "Terminal recording and playback client for asciinema.org"
homepage = "https://github.com/LegNeato/asciinema-rs"
repository = "https://github.com/LegNeato/asciinema-rs"
readme = "README.md"
keywords = ["asciinema", "asciicast", "ascii", "tty", "riir"]
license = "MIT/Apache-2.0"
# https://github.com/rust-lang/cargo/issues/1565
publish = false

[dependencies]
config = "0.11.0"
failure = "0.1.1"
termcolor = "1.1.2"
structopt = "0.3.22"
libc = "0.2.36"
asciicast = { git = "https://github.com/MathiasPius/asciicast-rs" }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.4", features = ["multipart", "blocking"] }
serde = { version = "^1.0.8", features = ["derive"] }
serde_json = "1.0"
pty-shell = { path = "pty-shell", version = "0.3.0"}
url = { version = "2.2.2", features = ["serde"] }
termion = "1.0.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
os_type = "2.0.0"
openssl-probe = "0.1.2"
derive_builder = "0.10.2"
tempfile = "3.0.0"

[package.metadata.release]
dev-version-ext = "pre"
pre-release-replacements = [
  { file="CHANGELOG.md", search="## master", replace="## master\n\n* No changes yet\n\n## [[{{version}}] - {{date}}](https://github.com/LegNeato/asciinema-rs/releases/tag/v{{version}})"},
]
pre-release-commit-message = "Release {{version}}"
pro-release-commit-message = "Bump version to {{version}}"
tag-prefix = "v"
tag-message = "Release {{prefix}}{{version}}"
upload-doc = false
